Spec: Add third party database for autocompleting
As it may be incomfortable for the user to enter each field,
Social Library can fetch data from third party websites or database
to pre-fill fields.

--- a/reqs/personal-aspect.toml
+++ b/reqs/personal-aspect.toml
@@ -47,4 +47,9 @@ A user should be able to add and remove a media from his library.
 A media can be added directly by the user by creating it as described in
 [REQ-personal-media] or being added from the Social Library database aggregated
 from all users.
+
+If the media is not yet available in the database, data can be fetched from a
+third party database or website like Amazon to autocomplete some parts of the
+required fields after the user has at least given the title or the identifier
+(ISBN for books).
 '''
